--- a/about.html
+++ b/about.html
@@ -2,12 +2,16 @@
 <html>
 <title>Shrey Kanabar | About Me</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
  <link rel="stylesheet" href="./css/style.css">
+ <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
 
 
@@ -51,6 +55,7 @@ body, html {
 }
 </style>
 
+<!--
 <body>
 
 <div id="mySidenav" class="sidenav">
@@ -83,22 +88,54 @@ function closeNav() {
      
 </body>
 
+-->
+
+
+
 <body>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container" id="home">
+<div class="bgimg-1 w3-display-container wrapper" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-xxxlarge w3-wide w3-text-white">ABOUT <span class="w3-hide-small">ME</span> .</span>
   </div>
-<div id="main">
 
-  <img src="./img/logo.png" style="float:left;width:90px;height:90px;">
+            <header>
 
-  <span style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776;</span>
+                  <nav>
+
+                        <div class="menu-icon">
+                              <i class="fa fa-bars fa-2x"></i>
+                        </div>
+
+                        <div class="logo"><img src="./img/logo.png" style="float:left;width:100px;height:100px;">
+                              
+                        </div>
+
+                        <div class="menu">
+<style>
+nav ul li a {
+      text-decoration: none;
+      color: #f4f4f4;
+      font-size: 16px;
+      font-weight:bold
+}
+</style>
+
+                              <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">About Me</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="presets.html">Presets</a></li>
+                              </ul>
+                        </div>
+                  </nav>
+
+            </header>
 
 </div>
 
-</div>
+
 
 <section id="id2">
 
@@ -108,7 +145,7 @@ function closeNav() {
   <div class="w3-row">
     <div class="w3-col m6 w3-center">
       <p><b><i class="fa fa-user w3-margin-right"></i>Shrey Kanabar</b></p><br>
-      <img src="./img/neo.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      <img src="./img/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
 <pre>
@@ -184,9 +221,10 @@ function closeNav() {
 </body>
 
 <footer class="w3-container w3-padding-64 w3-center w3-xlarge" style="margin-top:128px"> 
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <a href="https://www.facebook.com/shrey.kanabar.3"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+  <a href="https://www.instagram.com/shreykan24/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  
   <p class="w3-medium">Shrey Kanabar, Copyright &copy; 2018</p>
     </footer>
 </section>
