--- a/gallery.html
+++ b/gallery.html
@@ -2,18 +2,23 @@
 <html>
 <title>Shrey Kanabar | Gallery</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+ <link rel="stylesheet" href="./css/style.css">
+ <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <style>
 body,h1 {font-family: "Montserrat", sans-serif}
 img {margin-bottom: -7px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 
-
+<!--
 <body>
 <section id="page">
 
@@ -47,18 +52,54 @@ function closeNav() {
 </script>
      
 </body>
+-->
 
 
 <body>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
-
 <!-- Header -->
 <div class="w3-opacity">
 <!--<span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span>  -->
 <div class="w3-clear"></div>
+ <header>
+
+                  <nav>
+
+                        <div class="menu-icon">
+                              <i class="fa fa-bars fa-2x"></i>
+                        </div>
+
+                        <div class="logo"><img src="./img/logo1.png" style="float:left;width:100px;height:100px;">
+                              
+                        </div>
+
+                        <div class="menu">
+<style>
+nav ul li a {
+      text-decoration: none;
+      color: #000000;
+      font-size: 16px;
+      font-weight:bold
+}
+</style>
+
+                              <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">About Me</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="presets.html">Presets</a></li>
+                              </ul>
+                        </div>
+                  </nav>
+
+            </header>
 <header class="w3-center w3-margin-bottom">
+  <pre>
+
+
+  </pre>
   <h1><b>Gallery</b></h1>
   <p><b>Exclusive Collection of Images</b></p>
   <p class="w3-padding-16"><button class="w3-button w3-red" onclick="myFunction()">Toggle Grid Padding</button></p>
@@ -70,7 +111,7 @@ function closeNav() {
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
     <img src="./img/logo_html.jpg" style="width:100%">
-    <img src="./img/logo_css.png" style="width:100%">
+    <img src="./img/beach.jpg" style="width:100%">
     <img src="./img/showcase.jpg" style="width:100%">
     <img src="./img/river.jpg" style="width:100%">
   </div>
@@ -83,10 +124,10 @@ function closeNav() {
   </div>
 
   <div class="w3-third">
-    <img src="./img/logo_brush.png" style="width:100%">
+    <img src="./img/cave.jpg" style="width:100%">
     <img src="./img/showcase3.jpg" style="width:100%">
     <img src="./img/mountain.jpg" style="width:100%">
-    <img src="./img/sky.jpg" style="width:100%">
+    <img src="./img/logo_brush.png" style="width:100%">
   </div>
 </div>
 
@@ -114,8 +155,12 @@ function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
 }
 </script>
-    <footer>
-      <p>Shrey Kanabar, Copyright &copy; 2018</p>
+    <footer class="w3-container w3-padding-64 w3-center w3-xlarge" style="margin-top:128px"> 
+  <a href="https://www.facebook.com/shrey.kanabar.3"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+  <a href="https://www.instagram.com/shreykan24/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  
+  <p class="w3-medium">Shrey Kanabar, Copyright &copy; 2018</p>
     </footer>
   </body>
 </section>
