--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <title>Shrey Kanabar | Home</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
  <link rel="stylesheet" href="./css/style.css">
+ <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
 
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif;}
@@ -43,6 +48,7 @@ body, html {
 }
 </style>
 
+<!--
 <body>
 
 <div id="mySidenav" class="sidenav">
@@ -74,6 +80,7 @@ function closeNav() {
 </script>
      
 </body>
+-->
 
 
 
@@ -84,9 +91,38 @@ function closeNav() {
     <span class="w3-center w3-xxxlarge w3-wide w3-text-white">WELCOME <span class="w3-hide-small"></span> .</span>
   </div>
 
+<!--
 <img src="./img/logo.png" style="float:left;width:100px;height:100px;">
+-->
 
-<span style="color:#e8491d; font-size:50px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+ <div class="wrapper">
+            <header>
+
+                  <nav>
+
+                        <div class="menu-icon">
+                              <i class="fa fa-bars fa-2x"></i>
+                        </div>
+
+                        <div class="logo"><img src="./img/logo.png" style="float:left;width:100px;height:100px;">
+                              
+                        </div>
+
+                        <div class="menu">
+                              <ul>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="about.html">About Me</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="presets.html">Presets</a></li>
+                              </ul>
+                        </div>
+                  </nav>
+
+            </header>
+
+<span style="color:#ffffff; opacity: 0; font-size:50px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
 <pre>
 
 
@@ -102,10 +138,11 @@ function closeNav() {
 
 </pre>
 
-<button class="button" style="margin-left:426px; vertical-align:middle;margin-right: 0px"><span><a href="gallery.html" style="text-decoration: none">GALLERY</a> </span></button>
+<p align="center">
+<button class="button" style="vertical-align:middle;margin-right: 0px"><span><a href="gallery.html" style="text-decoration: none">GALLERY</a> </span></button>
 
 <button class="button2" style="margin-left:100px; vertical-align:middle;"><span><a href="presets.html" style="text-decoration: none">PURCHASES </a></span></button>
-
+</p>
 </div>
 
       </section>
@@ -151,19 +188,18 @@ h2 {
       <div class="container">
         <div class="box">
           <a href="presets.html"><img src="./img/logo_html.jpg" alt="stars" height="250">
-          <h3>Learn Adobe Photoshop CC</h3>
-          <p>Create anything you can imagine.
-Learn the basics, or refine your skills with tutorials designed to inspire.</p>
+          <h3>Coming Soon</h3>
+          <p></p>
         </div>
         <div class="box">
-          <a href="presets.html"><img src="./img/logo_css.png" alt="visualsoj" height="250" >
-          <h3>Night City</h3>
-          <p>Learn to create your very own presets, this offers some tips on how to build a preset collection and what to avoid when you do.</p>
+          <a href="presets.html"><img src="./img/city1.jpg" alt="visualsoj" height="250" >
+          <h3>Night City Preset Pack</h3>
+          <p>Personally crafted by me, perfect for cityscape photographers. Each preset being tailored to its specific needs.</p>
         </div>
         <div class="box">
-          <a href="presets.html"><img src="./img/logo_brush.png" alt="jacob" height="250">
+          <a href="presets.html"><img src="./img/beach.jpg" alt="jacob" height="250">
           <h3>Maldives Preset Pack</h3>
-          <p>Custom made Adobe Lightroom Presets</p>
+          <p>Beautiful airy summer presets to help you create a light, deluxe style with pastel colors. This collection has the perfect adjustments to create a clean, consistent piece.</p>
         </div>
       </div>
 
@@ -179,10 +215,11 @@ Learn the basics, or refine your skills with tutorials designed to inspire.</p>
 
 
     <footer class="w3-container w3-padding-64 w3-center w3-xlarge" style="margin-top:128px"> 
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <p class="w3-medium">Shrey Kanabar, Copyright &copy; 2018<a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green"></a></p>
+  <a href="https://www.facebook.com/shrey.kanabar.3"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+
+  <a href="https://www.instagram.com/shreykan24/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+  
+  <p class="w3-medium">Shrey Kanabar, Copyright &copy; 2018</p>
     </footer>
   </body>
 </html>
