--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>Shrey Kanabar | Home</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta name="description" content="Premium Lightroom Photo Presets: Maldives Preset Pack and Night City Preset Pack">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
