--- a/gallery.html
+++ b/gallery.html
@@ -113,7 +113,7 @@ nav ul li a {
     <img src="./img/logo_html.jpg" style="width:100%">
     <img src="./img/beach.jpg" style="width:100%">
     <img src="./img/showcase.jpg" style="width:100%">
-    <img src="./img/river.jpg" style="width:100%">
+    <img src="./img/River.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
