--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>Shrey Kanabar | Home</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta name="description" content="Premium Lightroom Photo Presets: Maldives Preset Pack and Night City Preset Pack">
+<meta charset="UTF-8"> 
+ <meta name="description" content="Premium Lightroom Photo Presets: Maldives Preset Pack and Night City Preset Pack">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="shortcut icon" type="image/x-icon" href="./img/logo.png" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
