--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <title>Shrey Kanabar | Home</title>
-<meta charset="UTF-8"> 
- <meta name="description" content="Premium Lightroom Photo Presets: Maldives Preset Pack and Night City Preset Pack">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Premium Lightroom Photo Presets: Maldives Preset Pack and Night City Preset Pack">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="shortcut icon" type="image/x-icon" href="./img/logo.png" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -43,7 +44,7 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
+    .bgimg-1{
         background-attachment: scroll;
     }
 }
@@ -141,7 +142,7 @@ function closeNav() {
 </pre>
 
 <p align="center">
-<button class="button" style="vertical-align:middle;margin-right: 0px"><span><a href="gallery.html" style="text-decoration: none">GALLERY</a> </span></button>
+<button class="button" style="margin-right: 0px; margin-top: 3.5%"><span><a href="gallery.html" style="text-decoration: none">GALLERY</a> </span></button>
 
 <button class="button2" style="margin-left:100px; vertical-align:middle;"><span><a href="presets.html" style="text-decoration: none">PURCHASES </a></span></button>
 </p>
